--- a/src/index.css
+++ b/src/index.css
@@ -1,9 +1,3 @@
-:root {
-  --opponent-bg-color: #c76a6a;
-  --you-bg-color: #6a8fc7;
-  --white: #fff;
-}
-
 *,
 ::before,
 ::after {
@@ -22,4 +16,13 @@ body {
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
+}
+
+button {
+  appearance: none;
+  background-color: transparent;
+  border: none;
+  font-size: 14px;
+  line-height: 14px;
+  outline: none;
 }
